<resources>
    <string name="app_name">yacv</string>
    <string name="cover_image_placeholder">Cover Image</string>
    <string name="library">Library</string>
    <string name="browse_file">Browse File</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="select_root_folder">Select Folder</string>
    <string name="rescan">Rescan</string>
    <string name="yacv_needs_storage">yacv needs storage</string>
    <string name="yacv_explain_storage">yacv needs your permission to read comic in your phone.</string>
    <string name="ok_allow">OK, allow</string>
    <string name="preference_file_key">com.uet.nvmnghia.yacv</string>
    <string name="no_root">No folder selected, so yacv can\'t scan for comics. Click the Folder icon to select one!</string>
    <string name="no_root_span_part">Folder icon</string>
    <string name="have_root_no_permission">yacv is not allowed to read 😿. Click here to allow yacv!</string>
    <string name="have_root_no_permission_span_part">here</string>
    <string name="no_comic">Looks like it\'s empty here. Consider adding more comics, or click the Folder icon to pick another one for yacv.</string>
    <string name="no_comic_span_part">Folder icon</string>
    <string name="deny">Deny</string>
    <string name="no_read_permission_forever">yacv is not allowed to read, forever 😿. Open Settings and give yacv a chance!</string>
    <string name="no_read_permission_forever_span_part">Settings</string>
    <string name="have_root_not_exist">yacv had a folder, but can\'t find it anymore (is it deleted?). Give yacv another one by clicking the Folder icon!</string>
    <string name="have_root_not_exist_span_part">Folder icon</string>
    <string name="search_hint">Search title, character,…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query">query</string>
    <string name="comic">Comic</string>
    <string name="series">Series</string>
    <string name="character">Character</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="see_more">See More…</string>
    <string name="folder">Folder</string>
    <string name="query_single_type">query_single_type</string>
    <string name="query_multiple_types">query_multiple_types</string>
    <string name="exit">Exit</string>
    <string name="allow_yacv">Allow yacv</string>
    <string name="rationale">yacv needs to access your phone storage to read comics.</string>
    <string name="settings">Settings</string>
    <string name="rationale_settings">Without permission, yacv cannot proceed any further. Click Settings and enable the Read Storage under Permission menu.</string>
    <string name="comic_info">Info</string>
    <string name="file_name">File name</string>
    <string name="folder_path">Folder path</string>
    <string name="title">Title</string>
    <string name="unknown">Unknown</string>
    <string name="chap_num">Chap/No</string>
    <string name="volume">Volume</string>
    <string name="summary">Summary</string>
    <string name="cover">Cover</string>
    <string name="authors">Authors</string>
    <string name="read_0">Haven\'t read</string>
    <string name="read_some">Read %1$d times</string>
    <string name="read_many">Read more than 10 times</string>
    <string name="metadata">Metadata</string>
</resources>