<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.permission.PermissionFragment"
    android:padding="5dp">

    <ImageView
        android:id="@+id/permission_book_banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_menu_book_24"
        app:layout_constraintBottom_toTopOf="@+id/permission_rationale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintWidth_percent="0.4"
        app:tint="@color/gray_400" />

    <TextView
        android:id="@+id/permission_rationale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rationale"
        app:layout_constraintBottom_toTopOf="@+id/permission_exit"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/permission_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/purple_500"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/permission_allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_yacv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/purple_500"
        android:textAllCaps="true"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>