<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.metadata.MetadataFragment"
    android:padding="5dp">

    <!-- TODO: chips for multi-value fields -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--================================================================================-->
        <!-- Cover -->
        <!--================================================================================-->

        <ImageView
            android:id="@+id/metadata_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintDimensionRatio="H,663:1024"
            android:contentDescription="@string/cover"/>


        <!--================================================================================-->
        <!-- File name -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_filename_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/metadata_cover"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/file_name" />

        <TextView
            android:id="@+id/metadata_filename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_filename_label"
            app:layout_constraintStart_toEndOf="@+id/metadata_cover"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:text="asdasd asd as as as "
            android:maxLines="2" />


        <!--================================================================================-->
        <!-- Folder path -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_folder_path_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_filename"
            app:layout_constraintStart_toEndOf="@+id/metadata_cover"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/folder_path" />

        <TextView
            android:id="@+id/metadata_folder_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_folder_path_label"
            app:layout_constraintStart_toEndOf="@+id/metadata_cover"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:text="asdasd asd as as as "
            android:maxLines="3" />


        <!--================================================================================-->
        <!-- Read count -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_read_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Read 153 times"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="@id/metadata_love"
            app:layout_constraintBottom_toBottomOf="@id/metadata_love"
            app:layout_constraintStart_toEndOf="@id/metadata_cover"
            android:textStyle="bold"
            android:textSize="12dp"/>


        <!--================================================================================-->
        <!-- Love -->
        <!--================================================================================-->

        <ImageView
            android:id="@+id/metadata_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:paddingEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/metadata_folder_path" />


        <!--================================================================================-->
        <!-- Title -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_cover"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/metadata_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_title_label"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:text="asdasd asd as as as "
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.67"
            android:maxLines="3" />


        <!--================================================================================-->
        <!-- Chap/No -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_number_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/chap_num"
            app:layout_constraintBottom_toBottomOf="@+id/metadata_title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/metadata_number"
            app:layout_constraintTop_toTopOf="@id/metadata_title_label" />

        <TextView
            android:id="@+id/metadata_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_number_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:text="952"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.28"
            android:maxLines="3" />


        <!--================================================================================-->
        <!-- Series -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_series_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_title"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/series" />

        <TextView
            android:id="@+id/metadata_series"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_series_label"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:text="@string/unknown"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.67"
            android:maxLines="3" />


        <!--================================================================================-->
        <!-- Volume -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_volume_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/volume"
            app:layout_constraintBottom_toBottomOf="@+id/metadata_series_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/metadata_volume"
            app:layout_constraintTop_toTopOf="@id/metadata_series_label" />

        <TextView
            android:id="@+id/metadata_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_volume_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:text="3"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.28"
            android:maxLines="3" />


        <!--================================================================================-->
        <!-- Authors -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_authors_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_series"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/authors" />

        <TextView
            android:id="@+id/metadata_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_authors_label"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:text="@string/unknown"
            android:maxLines="3" />


        <!--================================================================================-->
        <!-- Summary -->
        <!--================================================================================-->

        <TextView
            android:id="@+id/metadata_summary_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_authors"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:textSize="12dp"
            android:text="@string/summary" />

        <TextView
            android:id="@+id/metadata_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/metadata_summary_label"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="25dp"
            android:text="@string/unknown"
            android:maxLines="5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>